Closed
Bug 790093
Opened 13 years ago
Closed 13 years ago
Unnecessary const_cast in the nsGfxButtonControlFrame.cpp
Categories
(Core :: Layout: Form Controls, defect)
Core
Layout: Form Controls
Tracking
()
RESOLVED
FIXED
mozilla18
People
(Reporter: abienner, Assigned: abienner)
Details
Attachments
(1 file)
|
2.33 KB,
patch
|
sicking
:
review+
mounir
:
checkin+
|
Details | Diff | Splinter Review |
User Agent: Mozilla/5.0 (X11; Ubuntu; Linux x86_64; rv:15.0) Gecko/20100101 Firefox/15.0
Build ID: 20120825192204
Steps to reproduce:
Not a real "bug", and very minor thing, but I saw this when working on bug 547004 for implementing input color, and it bothers me.
But as it's not related directly, I'm opening this bug, as suggested.
There is an unnecessary const_cast in the nsGfxButtonControlFrame.cpp
I don't know if it was needed one day (it was added before Hg migration), but I'm quite sure it's not necessary today.
I know it's better (from a design point of view) to avoid const_cast, and also that this might help the compiler in some (very few) cases to optimize the code.
But only the fact that it makes the code nicer is enough to change this IMHO.
Actual results:
const_cast
Expected results:
no const_cast
| Assignee | ||
Updated•13 years ago
|
Attachment #659882 -
Flags: review?(jonas)
| Assignee | ||
Updated•13 years ago
|
Severity: normal → minor
OS: Linux → All
Hardware: x86_64 → All
Attachment #659882 -
Flags: review?(jonas) → review+
| Assignee | ||
Updated•13 years ago
|
Attachment #659882 -
Flags: checkin?(jonas)
Comment 1•13 years ago
|
||
Sent to try:
https://tbpl.mozilla.org/?tree=Try&rev=54bed0a9a320
Assignee: nobody → arnaud.bienner
Status: UNCONFIRMED → ASSIGNED
Ever confirmed: true
Updated•13 years ago
|
Component: Untriaged → Layout: Form Controls
Product: Firefox → Core
Version: 15 Branch → Trunk
Comment 2•13 years ago
|
||
Target Milestone: --- → mozilla18
Updated•13 years ago
|
Attachment #659882 -
Flags: checkin?(jonas) → checkin+
| Assignee | ||
Comment 3•13 years ago
|
||
I think we can close this bug, right?
Unfortunately I'm not allowed to choose FIXED in the status (only RESOLVED and then INVALID, etc.) :(
Comment 4•13 years ago
|
||
(In reply to Arnaud from comment #3)
> I think we can close this bug, right?
> Unfortunately I'm not allowed to choose FIXED in the status (only RESOLVED
> and then INVALID, etc.) :(
No, this bug will be marked as RESOLVED FIXED when it will be pushed to mozilla-central. It's right now it mozilla-inbound which is some kind of baking repository that is used to make sure we don't push broken stuff on mozilla-central.
| Assignee | ||
Comment 5•13 years ago
|
||
Oh! OK: I didn't thought about that.
Thanks for the clarification ;)
Comment 6•13 years ago
|
||
Status: ASSIGNED → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•