Bug 790093 - Remove unnecessary const_cast in nsGfxButtonControlFrame.cpp. r=sicking