layout/forms/nsGfxButtonControlFrame.cpp
@@ -57,7 +57,7 @@ nsGfxButtonControlFrame::GetType() const
 // We'll return true if type is NS_FORM_INPUT_BUTTON and our parent
 // is a file input.
 bool
-nsGfxButtonControlFrame::IsFileBrowseButton(int32_t type)
+nsGfxButtonControlFrame::IsFileBrowseButton(int32_t type) const
 {
   bool rv = false;
   if (NS_FORM_INPUT_BUTTON == type) {
@@ -142,7 +142,7 @@ nsGfxButtonControlFrame::GetFormProperty(nsIAtom* aName, nsAString& aValue) cons
     // This property is used by accessibility to get
     // the default label of the button.
     nsXPIDLString temp;
-    rv = const_cast<nsGfxButtonControlFrame*>(this)->GetDefaultLabel(temp);
+    rv = GetDefaultLabel(temp);
     aValue = temp;
   } else {
     aValue.Truncate();
@@ -161,7 +161,7 @@ NS_QUERYFRAME_TAIL_INHERITING(nsHTMLButtonControlFrame)
 // label from a string bundle as is done for all other UI strings.
 // See bug 16999 for further details.
 nsresult
-nsGfxButtonControlFrame::GetDefaultLabel(nsXPIDLString& aString)
+nsGfxButtonControlFrame::GetDefaultLabel(nsXPIDLString& aString) const
 {
   nsCOMPtr<nsIFormControl> form = do_QueryInterface(mContent);
   NS_ENSURE_TRUE(form, NS_ERROR_UNEXPECTED);
@@ -170,10 +170,10 @@ nsGfxButtonControlFrame::GetDefaultLabel(nsXPIDLString& aString)
   const char *prop;
   if (type == NS_FORM_INPUT_RESET) {
     prop = "Reset";
-  } 
+  }
   else if (type == NS_FORM_INPUT_SUBMIT) {
     prop = "Submit";
-  } 
+  }
   else if (IsFileBrowseButton(type)) {
     prop = "Browse";
   }
